added script notices and tools to convert client values on version updates